slew of things, series mostly working, saving state to break other stuff
