# app/endpoints/getseriesinfo.js
@@ -1,19 +1,19 @@
 /**
- * Start download based on source configuration of entryId
+ * Get details about a specific series
  *
- * POST: /api/v1/downloads/source:{sourceId}/{entryId}
+ * GET: /api/v1/series/{sourceId}/{entryId}
  * 
  */
 
 const plugins = require('../components/plugin_handler');
 
-exports.handler = function startdownloadfromsource(req, res, next) {
+exports.handler = function getseriesinfo(req, res, next) {
   const sourceId = req.params.sourceId;
   const entryId = req.params.entryId;
 
   plugins
     .getPlugin(sourceId)
-    .downloadId(entryId)
+    .info(entryId)
     .then((results) => res.status(200).json(results))
     .catch(next);
 }
